[no-deploy] redesign folder structure

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | default_exp common.lobby"
+    "# | default_exp domain.lobby"
    ]
   },
   {
@@ -16,16 +16,9 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "from typing import get_args\n",
-    "import datetime as dt\n",
-    "import logging, dataclasses\n",
     "from dataclasses import field\n",
-    "import random, string\n",
-    "import fastcore.all as fc\n",
-    "from fasthtml.common import *\n",
-    "from meme_games.common.utils import *\n",
-    "from meme_games.common.database import *\n",
-    "from meme_games.common.user import *"
+    "from meme_games.core import *\n",
+    "from meme_games.domain.user import *"
    ]
   },
   {
@@ -60,6 +53,7 @@
     "\n",
     "@dataclass\n",
     "class LobbyMember(fc.GetAttr, Model):\n",
+    "    \"\"\"Represents a member in a lobby, usually associated with a websocket connection.\"\"\"\n",
     "    _lobby_type = 'basic'\n",
     "    _ignore = ('user', 'send', 'ws')\n",
     "    _default = 'user'\n",
@@ -86,22 +80,39 @@
     "        assert cls._lobby_type != LobbyMember._lobby_type, f\"You must set different `_lobby_type` from '{LobbyMember._lobby_type}'\"\n",
     "        LOBBY_REGISTRY[cls._lobby_type] = cls\n",
     "\n",
-    "    def spectate(self): self.is_player = False\n",
+    "    def spectate(self): \n",
+    "        \"\"\"Sets the member to be a spectator.\"\"\"\n",
+    "        self.is_player = False\n",
     "\n",
     "    def play(self):\n",
+    "        \"\"\"Sets the member to be a player.\"\"\"\n",
     "        self.joined_at = dt.datetime.now()\n",
     "        self.is_player = True\n",
     "\n",
-    "    def connect(self, send: FunctionType, ws: Optional[WebSocket] = None): self.send, self.ws = send, ws\n",
-    "    def disconnect(self): self.send, self.ws = None, None\n",
-    "    def add_score(self, score: int): self.score += score\n",
-    "    def reset_score(self): self.score = 0\n",
-    "    def sync_user(self, u: User): self.user = u\n",
+    "    def connect(self, send: FunctionType, ws: Optional[WebSocket] = None): \n",
+    "        \"\"\"Connects the member with a websocket.\"\"\"\n",
+    "        self.send, self.ws = send, ws\n",
+    "    def disconnect(self): \n",
+    "        \"\"\"Disconnects the member.\"\"\"\n",
+    "        self.send, self.ws = None, None\n",
+    "    def add_score(self, score: int): \n",
+    "        \"\"\"Adds a score to the member.\"\"\"\n",
+    "        self.score += score\n",
+    "    def reset_score(self): \n",
+    "        \"\"\"Resets the member's score.\"\"\"\n",
+    "        self.score = 0\n",
+    "    def sync_user(self, u: User): \n",
+    "        \"\"\"Synchronizes user data for the member.\"\"\"\n",
+    "        self.user = u\n",
     "\n",
     "    @property\n",
-    "    def is_connected(self): return self.send is not None\n",
+    "    def is_connected(self): \n",
+    "        \"\"\"Checks if the member is connected.\"\"\"\n",
+    "        return self.send is not None\n",
     "    @property\n",
-    "    def is_host(self): return self.is_host_\n",
+    "    def is_host(self): \n",
+    "        \"\"\"Checks if the member is the host.\"\"\"\n",
+    "        return self.is_host_\n",
     "\n",
     "    def __eq__(self, other: Union[User, 'LobbyMember']): return self.uid == other.uid\n",
     "\n",
@@ -113,10 +124,14 @@
     "\n",
     "    @classmethod\n",
     "    def convert(cls, member: Optional['LobbyMember'] = None):\n",
+    "        \"\"\"Converts a member to a different lobby type.\"\"\"\n",
     "        cf = dataclasses.fields(cls)\n",
     "        if member: return cls(**{f.name: getattr(member, f.name) for f in dataclasses.fields(member) if f in cf})\n",
     "\n",
-    "    def update_user(self, u: User): self.user = u\n",
+    "    def update_user(self, u: User): \n",
+    "        \"\"\"Updates the user associated with this member.\"\"\"\n",
+    "        # TODO the same as sync_user\n",
+    "        self.user = u\n",
     "\n",
     "\n",
     "# maps lobby names to memberTypes\n",
@@ -136,6 +151,7 @@
     "\n",
     "@dataclass\n",
     "class Lobby[T: LobbyMember](Model):\n",
+    "    \"\"\"Represents a game lobby.\"\"\"\n",
     "    _ignore = ('members', 'host')\n",
     "    \n",
     "    id: str = field(default_factory=random_id)\n",
@@ -157,6 +173,7 @@
     "        for m in sorted(self.members.values(), key=lambda m: m.joined_at): yield m\n",
     "\n",
     "    def set_host(self, member: T): \n",
+    "        \"\"\"Sets a member as the lobby host.\"\"\"\n",
     "        if self.host: self.host.is_host_=False\n",
     "        member.is_host_ = True\n",
     "        self.host = member\n",
@@ -169,6 +186,7 @@
     "        return m\n",
     "    \n",
     "    def add_member(self, member: T):\n",
+    "        \"\"\"Adds a member to the lobby.\"\"\"\n",
     "        member.lobby_id = self.id\n",
     "        self.members[member.uid] = member\n",
     "\n",
@@ -188,6 +206,7 @@
     "        return m\n",
     "\n",
     "    def convert[T: LobbyMember](self: 'Lobby', lobby_type: str = LobbyMember._lobby_type) -> 'Lobby[T]':\n",
+    "        \"\"\"Converts the lobby and its members to a different type.\"\"\"\n",
     "        if self.lobby_type == lobby_type: return self\n",
     "        self.lobby_type = lobby_type\n",
     "        mtype = LOBBY_REGISTRY[self.lobby_type]\n",
@@ -223,10 +242,12 @@
     "        return self.lobbies\n",
     "\n",
     "    def update(self, lobby: Lobby[LobbyMember]):\n",
+    "        \"\"\"Updates a lobby and its members in the database.\"\"\"\n",
     "        self.memm[LOBBY_REGISTRY[lobby.lobby_type]].upsert_all(lobby.members.values())\n",
     "        return super().update(lobby)\n",
     "\n",
     "    def get(self, id: str) -> Lobby[LobbyMember]:\n",
+    "        \"\"\"Retrieves a lobby and its members from the database.\"\"\"\n",
     "        if id not in self.lobbies: return\n",
     "        lobby = Lobby.from_cols(self.lobbies.get(id))\n",
     "        lobby.members = {m.user_uid: m for m in self.memm[LOBBY_REGISTRY[lobby.lobby_type]].get_all(id)}\n",
@@ -259,10 +280,12 @@
     "        return self.members\n",
     "\n",
     "    def update(self, member: LobbyMember):\n",
+    "        \"\"\"Updates a member and their user data in the database.\"\"\"\n",
     "        self.um.update(member.user)\n",
     "        return super().update(member)\n",
     "\n",
     "    def get_all(self, lobby_id: str) -> list[LobbyMember]:\n",
+    "        \"\"\"Gets all members for a given lobby ID from the database.\"\"\"\n",
     "        cols = self.members.c\n",
     "        qry = f\"\"\"select {mk_aliases(LobbyMember, self.members)},\n",
     "                  {mk_aliases(User, self.users)}\n",
@@ -310,6 +333,7 @@
     "# | export\n",
     "\n",
     "class LobbyService:\n",
+    "    \"\"\"Manages lobby creation, retrieval, and lifecycle.\"\"\"\n",
     "    lobby_lifetime = dt.timedelta(hours=5)\n",
     "    lobby_limit = 50\n",
     "\n",
@@ -320,6 +344,7 @@
     "    def __repr__(self): return f'{self.__class__.__name__}(active_lobbies={len(self.lobbies)})'\n",
     "\n",
     "    def create_lobby[T: LobbyMember](self, u: User, lobby_id: Optional[str] = None, lobby_type: str = LobbyMember._lobby_type) -> Lobby[T]:\n",
+    "        \"\"\"Creates a new lobby and sets the user as the host.\"\"\"\n",
     "        lobby_id = lobby_id or random_id()\n",
     "        ids = list(self.lobbies) + self.lm.ids()\n",
     "        while lobby_id in ids: lobby_id = random_id()\n",
@@ -330,6 +355,7 @@
     "        return lobby\n",
     "\n",
     "    def get_lobby(self, id: Optional[str] = None) -> Optional[Lobby]:\n",
+    "        \"\"\"Gets a lobby from cache or the database.\"\"\"\n",
     "        lobby = self.lobbies.get(id)\n",
     "        if lobby: return lobby\n",
     "        lobby = self.lm.get(id)\n",
@@ -337,6 +363,7 @@
     "        return lobby\n",
     "\n",
     "    def delete_lobby(self, id: str):\n",
+    "        \"\"\"Deletes a lobby from cache and the database.\"\"\"\n",
     "        self.lobbies.pop(id)\n",
     "        self.lm.delete(id)\n",
     "\n",
@@ -351,6 +378,7 @@
     "        return self.create_lobby(u, id, ltype), True\n",
     "\n",
     "    def sync_active_lobbies_user(self, u: User):\n",
+    "        \"\"\"Synchronizes user information across all active lobbies they are in.\"\"\"\n",
     "        for l in self.lobbies.values(): \n",
     "            if u.uid in l.members: l.members[u.uid].update_user(u)\n",
     "\n",
@@ -454,6 +482,7 @@
    "source": [
     "# | export\n",
     "def Members(r: User|LobbyMember, lobby: Lobby):\n",
+    "    \"\"\"Renders a table of lobby members.\"\"\"\n",
     "    return Table(\n",
     "        Tr(Th('Name'), Th('id'), Th('Is connected')),\n",
     "        *[Tr(Td(UserName(r.user, member.user)), Td(member.uid), Td(member.is_connected)) for member in lobby.sorted_members()],\n",
