--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp common.user"
+    "#| default_exp domain.user"
    ]
   },
   {
@@ -17,14 +17,9 @@
    "source": [
     "#| export\n",
     "import time\n",
-    "from functools import wraps\n",
     "from dataclasses import dataclass\n",
-    "from fasthtml.common import *\n",
-    "from fasthtml.jupyter import JupyUvi, HTMX\n",
     "import fastlite as fl\n",
-    "import fastcore.all as fc\n",
-    "from meme_games.common.utils import *\n",
-    "from meme_games.common.database import *"
+    "from meme_games.core import *"
    ]
   },
   {
@@ -42,6 +37,7 @@
     "    filename: Optional[str] = None\n",
     "\n",
     "    async def set_picture(self, file: UploadFile, content_path='./user-content'):\n",
+    "        \"\"\"Sets the user's profile picture.\"\"\"\n",
     "        self.reset_picture(content_path)\n",
     "        fname = f\"{self.uid}_{time.time()}.{file.filename.split('.')[-1]}\"\n",
     "        dir = Path(content_path)\n",
@@ -50,6 +46,7 @@
     "        self.filename = str(fname)\n",
     "\n",
     "    def reset_picture(self, content_path='./user-content'):\n",
+    "        \"\"\"Removes the user's profile picture.\"\"\"\n",
     "        if not self.filename: return\n",
     "        path = Path(content_path)/self.filename\n",
     "        path.unlink(missing_ok=True)\n",
@@ -66,6 +63,7 @@
    "source": [
     "#| export\n",
     "class UserManager(DataManager):\n",
+    "    \"\"\"Manages user data and database operations.\"\"\"\n",
     "    def _set_tables(self): \n",
     "        self.db.create(User, pk='uid', transform=True)\n",
     "        self.users: fl.Table = self.db.t.user\n",
@@ -80,6 +78,7 @@
     "    def update(self, user: User): return self.users.update(user)\n",
     "    \n",
     "    def get_or_create(self, sess: dict, name: str = 'null') -> User:\n",
+    "        \"\"\"Gets a user from the database or creates a new one based on the session.\"\"\"\n",
     "        sess = sess['session'] if 'session' in sess else sess\n",
     "        uid = sess.setdefault('uid', random_id())\n",
     "        if uid in self.users: return self.users[uid]\n",
@@ -108,6 +107,7 @@
     "# | export\n",
     "\n",
     "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
+    "    \"\"\"Renders the user's name as a styled HTML span.\"\"\"\n",
     "    cls += ' muted' if not is_connected else ''\n",
     "    return Span(B(u.name) if r==u else u.name, data_username = u.uid, cls=cls, **kwargs)"
    ]
