--- a/notebooks/whoami.ipynb
+++ b/notebooks/whoami.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | default_exp whoami.domain"
+    "# | default_exp apps.whoami.domain"
    ]
   },
   {
@@ -17,7 +17,8 @@
    "source": [
     "# | export\n",
     "import ast\n",
-    "from meme_games.common import *"
+    "from meme_games.core import *\n",
+    "from meme_games.domain import *"
    ]
   },
   {
