add basic word packs, fix websockets

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -16,7 +16,6 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "from dataclasses import field\n",
     "from meme_games.core import *\n",
     "from meme_games.domain.user import *"
    ]
@@ -117,10 +116,10 @@
     "    def __eq__(self, other: Union[User, 'LobbyMember']): return self.uid == other.uid\n",
     "\n",
     "    @classmethod\n",
-    "    def from_cols(cls, data: dict):\n",
+    "    def from_dict(cls, data: dict):\n",
     "        data = cols2dict(data)\n",
-    "        data[cls]['user'] = User.from_cols(data.pop(User))\n",
-    "        return super().from_cols(data[cls])\n",
+    "        data[cls]['user'] = User.from_dict(data.pop(User))\n",
+    "        return super().from_dict(data[cls])\n",
     "\n",
     "    @classmethod\n",
     "    def convert(cls, member: Optional['LobbyMember'] = None):\n",
@@ -249,7 +248,7 @@
     "    def get(self, id: str) -> Lobby[LobbyMember]:\n",
     "        \"\"\"Retrieves a lobby and its members from the database.\"\"\"\n",
     "        if id not in self.lobbies: return\n",
-    "        lobby = Lobby.from_cols(self.lobbies.get(id))\n",
+    "        lobby = Lobby.from_dict(self.lobbies.get(id))\n",
     "        lobby.members = {m.user_uid: m for m in self.memm[LOBBY_REGISTRY[lobby.lobby_type]].get_all(id)}\n",
     "        hosts = [m for m in lobby.members.values() if m.is_host]\n",
     "        if hosts: lobby.host = hosts[0]\n",
@@ -291,7 +290,7 @@
     "                  {mk_aliases(User, self.users)}\n",
     "                  from {self.members} join {self.users}\n",
     "                  on {cols.user_uid} = {self.users.c.uid} where {cols.lobby_id} = ?\"\"\"\n",
-    "        return list(map(LobbyMember.from_cols, self.db.q(qry, [lobby_id])))\n"
+    "        return list(map(LobbyMember.from_dict, self.db.q(qry, [lobby_id])))\n"
    ]
   },
   {
@@ -314,7 +313,7 @@
     "db = init_db()\n",
     "um = UserManager(db)\n",
     "lm = LobbyManager(db)\n",
-    "register_manager(MemberManager(um), LobbyMember)\n",
+    "register_lobby_member_manager(MemberManager(um), LobbyMember)\n",
     "l = lm.insert(Lobby())\n",
     "l.create_member(um.create())\n",
     "m = l.create_member(um.create())\n",
@@ -383,6 +382,16 @@
     "            if u.uid in l.members: l.members[u.uid].update_user(u)\n",
     "\n",
     "    def update(self, lobby: Lobby): self.lm.update(lobby)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "DI.register_services([LobbyManager, MemberManager, LobbyService])"
    ]
   },
   {
