--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -91,6 +91,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|export\n",
+    "DI.register_service(UserManager)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| export\n",
     "def user_beforeware(manager: UserManager, skip=None):\n",
     "    '''Makes sure that request always contains valid user'''\n",
