--- a/notebooks/whoami.ipynb
+++ b/notebooks/whoami.ipynb
@@ -59,11 +59,11 @@
     "        return cols\n",
     "\n",
     "    @classmethod\n",
-    "    def from_cols(cls, data: dict):\n",
+    "    def from_dict(cls, data: dict):\n",
     "        data = cols2dict(data)\n",
-    "        data[cls]['user'] = User.from_cols(data.pop(User))\n",
+    "        data[cls]['user'] = User.from_dict(data.pop(User))\n",
     "        data[cls].update(data.pop(LobbyMember))\n",
-    "        return super(LobbyMember, cls).from_cols(data[cls])\n",
+    "        return super(LobbyMember, cls).from_dict(data[cls])\n",
     "\n",
     "\n",
     "WAILobby = Lobby[WhoAmIPlayer]"
@@ -156,7 +156,17 @@
     "                  join {self.mem_t} on {self.mem_t.c.id} = {self.players.c.id} \\\n",
     "                  join {self.mm.users} on {self.mem_t.c.user_uid} = {self.mm.users.c.uid} \\\n",
     "                  where {self.mem_t.c.lobby_id} = ?'''\n",
-    "        return list(map(WhoAmIPlayer.from_cols, self.db.q(qry, [lobby_id])))"
+    "        return list(map(WhoAmIPlayer.from_dict, self.db.q(qry, [lobby_id])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "DI.register_service(WhoAmIManager)"
    ]
   },
   {
