add background edit

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -156,7 +156,7 @@
     "    id: str = field(default_factory=random_id)\n",
     "    lobby_type: str = LobbyMember._lobby_type\n",
     "    locked: bool = False\n",
-    "    game_state: Optional[dict] = None\n",
+    "    background_url: Optional[str] = None\n",
     "    host: Optional[T] = None\n",
     "    members: dict[str, T] = field(default_factory=dict)\n",
     "    last_active: dt.datetime = field(default_factory=dt.datetime.now)\n",
