WIP, few fixes: - removed sass dependency - replaced some hs files with js (inline hs is prefered) - fixed not found page

--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
     "    \"\"\"Renders the user's name as a styled HTML span.\"\"\"\n",
-    "    cls += ' muted' if not is_connected else ''\n",
+    "    cls += ' opacity-50' if not is_connected else ''\n",
     "    return Span(B(u.name) if r==u else u.name, data_username = u.uid, cls=cls, **kwargs)"
    ]
   },
