add fancy wordpack manager

--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp domain.user"
+    "#| default_exp domain.user.user"
    ]
   },
   {
@@ -34,7 +34,7 @@
     "class User(Model):\n",
     "    uid: str\n",
     "    name: str\n",
-    "    filename: Optional[str] = None\n",
+    "    avatar: Optional[str] = None\n",
     "\n",
     "    async def set_picture(self, file: UploadFile, content_path='./user-content'):\n",
     "        \"\"\"Sets the user's profile picture.\"\"\"\n",
@@ -43,14 +43,14 @@
     "        dir = Path(content_path)\n",
     "        dir.mkdir(parents=True, exist_ok=True)\n",
     "        with open(dir/fname, 'wb') as f: f.write(await file.read())\n",
-    "        self.filename = str(fname)\n",
+    "        self.avatar = str(fname)\n",
     "\n",
     "    def reset_picture(self, content_path='./user-content'):\n",
     "        \"\"\"Removes the user's profile picture.\"\"\"\n",
-    "        if not self.filename: return\n",
-    "        path = Path(content_path)/self.filename\n",
+    "        if not self.avatar: return\n",
+    "        path = Path(content_path)/self.avatar\n",
     "        path.unlink(missing_ok=True)\n",
-    "        self.filename = None\n",
+    "        self.avatar = None\n",
     "        \n",
     "    def __eq__(self, value: 'User'): return self.uid == value.uid"
    ]
@@ -74,8 +74,8 @@
     "        self.users.insert(u)\n",
     "        return u\n",
     "    \n",
-    "    def get(self, uid: str): return self.users.get(uid)\n",
-    "    def update(self, user: User): return self.users.update(user)\n",
+    "    def get(self, uid: str) -> User: return self.users.get(uid)\n",
+    "    def update(self, user: User) -> User: return self.users.update(user)\n",
     "    \n",
     "    def get_or_create(self, sess: dict, name: str = 'null') -> User:\n",
     "        \"\"\"Gets a user from the database or creates a new one based on the session.\"\"\"\n",
