add basic alias

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -151,7 +151,7 @@
     "@dataclass\n",
     "class Lobby[T: LobbyMember](Model):\n",
     "    \"\"\"Represents a game lobby.\"\"\"\n",
-    "    _ignore = ('members', 'host')\n",
+    "    _ignore = ('members', 'host', 'game_state')\n",
     "    \n",
     "    id: str = field(default_factory=random_id)\n",
     "    lobby_type: str = LobbyMember._lobby_type\n",
@@ -160,12 +160,15 @@
     "    host: Optional[T] = None\n",
     "    members: dict[str, T] = field(default_factory=dict)\n",
     "    last_active: dt.datetime = field(default_factory=dt.datetime.now)\n",
+    "    game_state: Optional[Any] = None\n",
     "    \n",
     "\n",
     "    def __post_init__(self):\n",
     "        if self.host: self.host_uid = self.host.uid\n",
     "        if isinstance(self.last_active, str): \n",
     "            self.last_active = dt.datetime.fromisoformat(self.last_active)\n",
+    "            \n",
+    "    def __getattr__(self, name): return getattr(self.game_state, name)\n",
     "\n",
     "    def sorted_members(self):\n",
     "        '''lobby members sorted by `joined_at` date'''\n",
@@ -474,29 +477,6 @@
     "        if lobby: req.state.lobby = lobby\n",
     "        \n",
     "    return Beforeware(before, skip)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Views"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "def Members(r: User|LobbyMember, lobby: Lobby):\n",
-    "    \"\"\"Renders a table of lobby members.\"\"\"\n",
-    "    return Table(\n",
-    "        Tr(Th('Name'), Th('id'), Th('Is connected')),\n",
-    "        *[Tr(Td(UserName(r.user, member.user)), Td(member.uid), Td(member.is_connected)) for member in lobby.sorted_members()],\n",
-    "        id='members'\n",
-    "    )"
    ]
   }
  ],
