--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp domain.user.user"
+    "#| default_exp domain.user"
    ]
   },
   {
@@ -106,20 +106,6 @@
     "    '''Makes sure that request always contains valid user'''\n",
     "    def before(req: Request): req.state.user = manager.get_or_create(req.session)\n",
     "    return Beforeware(before, skip)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "\n",
-    "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
-    "    \"\"\"Renders the user's name as a styled HTML span.\"\"\"\n",
-    "    cls += ' opacity-50' if not is_connected else ''\n",
-    "    return Span(B(u.name) if r==u else u.name, data_username = u.uid, cls=cls, **kwargs)"
    ]
   },
   {
