[no-deploy] clean up

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -183,7 +183,7 @@
     "    def create_member(self, user: User, send: FunctionType = None, **kwargs) -> T:\n",
     "        '''Create a new member for lobby `lobby_type` and add to the lobby'''\n",
     "        self.last_active = dt.datetime.now()\n",
-    "        m = LOBBY_REGISTRY[self.lobby_type](user, send=send, **kwargs)\n",
+    "        m = LOBBY_REGISTRY[self.lobby_type](user=user, send=send, **kwargs)\n",
     "        self.add_member(m)\n",
     "        return m\n",
     "    \n",
