--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -65,7 +65,8 @@
     "class UserManager(DataManager):\n",
     "    \"\"\"Manages user data and database operations.\"\"\"\n",
     "    def _set_tables(self): \n",
-    "        self.db.create(User, pk='uid', transform=True)\n",
+    "        self.db.create_table('user', User.columns(), pk='uid', transform=True)\n",
+    "        self.db.t.user.cls = User\n",
     "        self.users: fl.Table = self.db.t.user\n",
     "        return self.users\n",
     "    \n",
