--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class UserManager(DataManager):\n",
+    "class UserManager(DataRepository):\n",
     "    \"\"\"Manages user data and database operations.\"\"\"\n",
     "    def _set_tables(self): \n",
     "        self.db.create_table('user', User.columns(), pk='uid', transform=True)\n",
