--- a/notebooks/whoami.ipynb
+++ b/notebooks/whoami.ipynb
@@ -118,9 +118,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class WhoAmIManager(DataManager[WhoAmIPlayer]):\n",
+    "class WhoAmIManager(DataRepository[WhoAmIPlayer]):\n",
     "    \n",
-    "    def __init__(self, member_manager: MemberManager):\n",
+    "    def __init__(self, member_manager: MemberRepo):\n",
     "        self.mm = member_manager\n",
     "        self.mem_t = self.mm.members\n",
     "        super().__init__(self.mm.db)\n",
