--- a/notebooks/wordpack.ipynb
+++ b/notebooks/wordpack.ipynb
@@ -49,7 +49,7 @@
     "        return cls.from_dict(d[cls])\n",
     "\n",
     "\n",
-    "class WordPackManager(DataManager[WordPack]):\n",
+    "class WordPackManager(DataRepository[WordPack]):\n",
     "    def _set_tables(self):\n",
     "        self.wordpacks = self.db.t.wordpacks.create(WordPack.columns(), pk='id', transform=True)\n",
     "        self.users = self.db.t.user\n",
