refactor generic lobby

--- a/notebooks/whoami.ipynb
+++ b/notebooks/whoami.ipynb
@@ -63,9 +63,7 @@
     "        data = cols2dict(data)\n",
     "        data[cls]['user'] = User.from_dict(data.pop(User))\n",
     "        data[cls].update(data.pop(LobbyMember))\n",
-    "        return super(LobbyMember, cls).from_dict(data[cls])\n",
-    "\n",
-    "WAILobby = Lobby[WhoAmIPlayer]"
+    "        return super(LobbyMember, cls).from_dict(data[cls])\n"
    ]
   },
   {
@@ -118,7 +116,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class WhoAmIManager(DataRepository[WhoAmIPlayer]):\n",
+    "class WhoAmIRepo(DataRepository[WhoAmIPlayer]):\n",
     "    \n",
     "    def __init__(self, member_manager: MemberRepo):\n",
     "        self.mm = member_manager\n",
@@ -165,7 +163,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "DI.register_service(WhoAmIManager)"
+    "WAILobby = Lobby[WhoAmIPlayer]\n",
+    "lobby.register_lobby_type(WAILobby, member_repo=WhoAmIRepo)\n",
+    "DI.register_service(WhoAmIRepo)"
    ]
   },
   {
