add timers and reviewing stage

--- a/notebooks/wordpack.ipynb
+++ b/notebooks/wordpack.ipynb
@@ -53,20 +53,39 @@
     "    def _set_tables(self):\n",
     "        self.wordpacks = self.db.t.wordpacks.create(WordPack.columns(), pk='id', transform=True)\n",
     "        self.users = self.db.t.user\n",
-    "        return self.wordpacks\n",
     "\n",
+    "        self.qry_template = f\"\"\"\n",
+    "        select {mk_aliases(WordPack, self.wordpacks)},\n",
+    "        {mk_aliases(User, self.users)}\n",
+    "        from {self.wordpacks} left join {self.users}\n",
+    "        on {self.wordpacks.c.author_id} = {self.users.c.uid}\n",
+    "        \"\"\"\n",
+    "        return self.wordpacks\n",
+    "    \n",
+    "    def __post_init__(self):\n",
+    "        self.init_defaults()\n",
+    "        \n",
     "    def get_all(self, offset: int = 0, limit: int = 100):\n",
-    "        qry = f\"\"\"select {mk_aliases(WordPack, self.table)},\n",
-    "                  {mk_aliases(User, self.users)}\n",
-    "                  from {self.table} left join {self.users}\n",
-    "                  on {self.table.c.author_id} = {self.users.c.uid}\n",
-    "                  limit {limit} offset {offset}\"\"\"\n",
+    "        qry = f\"{self.qry_template} limit {limit} offset {offset}\"\n",
     "        return list(map(WordPack.from_cols, self.db.q(qry)))\n",
     "    \n",
     "    \n",
     "    def get_by_id(self, id: str):\n",
     "        return WordPack.from_dict(self.table.get(id))\n",
-    "    "
+    "    \n",
+    "\n",
+    "    def find(self, name: str) -> Optional[WordPack]:\n",
+    "        '''Finds a wordpack by its name.'''\n",
+    "        res = self.db.q(f\"{self.qry_template} where {self.table.c.name} like ?\", [name])\n",
+    "        return WordPack.from_cols(res[0]) if res else None\n",
+    "    \n",
+    "\n",
+    "    def init_defaults(self):\n",
+    "        if self.find('default'): return\n",
+    "        packs = [\n",
+    "            WordPack(name='Default', words_='apple\\nbanana\\ncherry\\norange\\npear'),\n",
+    "        ]\n",
+    "        self.upsert_all(packs)"
    ]
   },
   {
