- polished alias - spectators generalization - other small fixes

--- a/notebooks/wordpack.ipynb
+++ b/notebooks/wordpack.ipynb
@@ -71,6 +71,7 @@
     "    \n",
     "    \n",
     "    def get_by_id(self, id: str):\n",
+    "        if id not in self.table: return None\n",
     "        return WordPack.from_dict(self.table.get(id))\n",
     "    \n",
     "\n",
